# primalschemers

./: Cargo.toml  pyproject.toml
src/: config.rs  digest.rs  kmer.rs  lib.rs  main.rs  msa.rs  seqfuncs.rs  seqio.rs  tm.rs
src/primaldimer/: mod.rs
