[package]
name = "primalschemers"
version = "0.1.9"
edition = "2021"

[lib]
name = "primalschemers"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10.0"
indicatif = {version = "*", features = ["rayon"]}
itertools = "0.14.0"
pyo3 = "0.23.3"

[tool.maturin]
features = ["pyo3/extension-module", "py"]